# swagger-output.json
@@ -2,18 +2,39 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "Gourmandise API",
-    "description": "Gourmandise pour alimenter l'application mobile de Gourmandise SARL"
+    "title": "REST API",
+    "description": ""
   },
-  "host": "172.20.10.2:8000",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
     "http"
   ],
+  "tags": [
+    {
+      "name": "Produit",
+      "description": "Opérations liées aux produits"
+    },
+    {
+      "name": "Client",
+      "description": "Opérations liées aux clients"
+    },
+    {
+      "name": "Commande",
+      "description": "Opérations liées aux commandes"
+    },
+    {
+      "name": "Authentification",
+      "description": "Opérations liées à l'identification"
+    }
+  ],
   "paths": {
     "/products": {
       "get": {
-        "description": "",
+        "description": "Avoir la liste entière des produits.",
+        "tags": [
+          "Produit"
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -26,7 +47,10 @@
     },
     "/product/{ref}": {
       "get": {
-        "description": "",
+        "description": "Récupérer un produit grâce à sa référence.",
+        "tags": [
+          "Produit"
+        ],
         "parameters": [
           {
             "name": "ref",
@@ -45,22 +69,12 @@
         }
       }
     },
-    "/vendeurs": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/client": {
       "post": {
-        "description": "",
+        "description": "Récupérer sa fiche client à l'aide de son code client à condition d'être connecté.",
+        "tags": [
+          "Client"
+        ],
         "parameters": [
           {
             "name": "authorization",
@@ -95,7 +109,10 @@
     },
     "/dernierescommandes": {
       "post": {
-        "description": "",
+        "description": "Permet à l'utilisateur de récupérer ses 10 dernières commandes à condition d'être connecté.",
+        "tags": [
+          "Commande"
+        ],
         "parameters": [
           {
             "name": "authorization",
@@ -130,7 +147,10 @@
     },
     "/register": {
       "post": {
-        "description": "",
+        "description": "Permet de se créer un compte.",
+        "tags": [
+          "Authentification"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -173,56 +193,12 @@
         }
       }
     },
-    "/insertcommandline": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "numero": {
-                  "example": "any"
-                },
-                "numero_ligne": {
-                  "example": "any"
-                },
-                "reference": {
-                  "example": "any"
-                },
-                "quantite_demandee": {
-                  "example": "any"
-                },
-                "total_ht": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "201": {
-            "description": "Created"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
     "/passcommand": {
       "post": {
-        "description": "",
+        "description": "Permet à l'utilisateur de passer une commande à condition d'être connecté.",
+        "tags": [
+          "Commande"
+        ],
         "parameters": [
           {
             "name": "authorization",
@@ -235,9 +211,6 @@
             "schema": {
               "type": "object",
               "properties": {
-                "numero": {
-                  "example": "any"
-                },
                 "codev": {
                   "example": "any"
                 },
@@ -250,10 +223,22 @@
                 "date_commande": {
                   "example": "any"
                 },
-                "total_ht": {
+                "commande_total_ht": {
                   "example": "any"
                 },
                 "total_tva": {
+                  "example": "any"
+                },
+                "etat": {
+                  "example": "any"
+                },
+                "com_payee": {
+                  "example": "any"
+                },
+                "com_prete": {
+                  "example": "any"
+                },
+                "lignecommande": {
                   "example": "any"
                 }
               }
@@ -275,7 +260,10 @@
     },
     "/login": {
       "post": {
-        "description": "",
+        "description": "Permet à un utilisateur de se connecter.",
+        "tags": [
+          "Authentification"
+        ],
         "parameters": [
           {
             "name": "body",
@@ -308,7 +296,10 @@
     },
     "/updateclient": {
       "post": {
-        "description": "",
+        "description": "Permet à un utilisateur connecté de modifier ses informations.",
+        "tags": [
+          "Client"
+        ],
         "parameters": [
           {
             "name": "authorization",
@@ -350,9 +341,6 @@
           "200": {
             "description": "OK"
           },
-          "201": {
-            "description": "Created"
-          },
           "401": {
             "description": "Unauthorized"
           }
@@ -361,7 +349,10 @@
     },
     "/updatepassword": {
       "post": {
-        "description": "",
+        "description": "Permet à un utilisateur connecté de modifier son mot de passe.",
+        "tags": [
+          "Client"
+        ],
         "parameters": [
           {
             "name": "authorization",
@@ -388,9 +379,6 @@
           "200": {
             "description": "OK"
           },
-          "201": {
-            "description": "Created"
-          },
           "401": {
             "description": "Unauthorized"
           }
@@ -399,7 +387,10 @@
     },
     "/deleteclient": {
       "post": {
-        "description": "",
+        "description": "Permet à un utilisateur connecté de supprimer son compte.",
+        "tags": [
+          "Client"
+        ],
         "parameters": [
           {
             "name": "authorization",
@@ -423,8 +414,131 @@
           "200": {
             "description": "OK"
           },
-          "201": {
-            "description": "Created"
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/lastpromo": {
+      "get": {
+        "description": "Permet de récupérer les dernières promotions.",
+        "tags": [
+          "Produit"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/lastproducts": {
+      "get": {
+        "description": "Permet de récupérer les nouveaux produits.",
+        "tags": [
+          "Produit"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/checkpromo": {
+      "post": {
+        "description": "Permet de vérifier si un code de promotion fourni existe bel et bien. Si oui, on le renvoie.",
+        "tags": [
+          "Produit"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "codepromo": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/commandpaymenton": {
+      "post": {
+        "description": "Permet de passer le statut d'une commande à 'payée'.",
+        "tags": [
+          "Commande"
+        ],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "numero": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/commandready": {
+      "post": {
+        "description": "Permet de mettre une commande à prête à être récupérée.",
+        "tags": [
+          "Commande"
+        ],
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "numero": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "401": {
             "description": "Unauthorized"
